<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0">

        <EditText
            android:id="@+id/firstnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_hint"
            />



    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_2ndinput_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0">
    <EditText
        android:id="@+id/secondnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_hint"
        />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/operand_add"
                    android:textSize="@dimen/operator_text_size"
                    android:background="@color/primarycolor"
                    android:layout_margin="@dimen/margin"

                    />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/operand_subtract"
                    android:textSize="@dimen/operator_text_size"
                    android:background="@color/primarycolor"
                    android:layout_margin="@dimen/margin"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/opernad_multiply"
                    android:textSize="@dimen/operator_text_size"
                    android:layout_margin="@dimen/margin"
                    android:background="@color/primarycolor"/>

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/operand_divide"
                    android:textSize="@dimen/operator_text_size"
                    android:layout_margin="@dimen/margin"
                    android:background="@color/primarycolor"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/clear"
            android:textSize="@dimen/cancel_text_size"
            android:textStyle="bold"
            android:background="@color/primarycolor"
            android:layout_margin="@dimen/margin"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="350dp"
        android:layout_height="@dimen/exit_button_height"
        android:text="@string/exit"
        android:textSize="@dimen/exit_text_size"
        android:background="@color/primarycolor"
        android:layout_margin="@dimen/margin"
        />
</GridLayout>
